# restricted-io-ifc

./: CHANGELOG.md  restricted-io-ifc.cabal
src/: IFCIO.hs
src/Internal/: RestrictedIO.hs  Untrusted.hs
